# MARS-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Clean.bat  GenProjectFiles.bat  MARS.sln.bat  README.md
Editor/: MARSEditor.cpp  imgui.ini
Engine/: CoreMinimal.h  MARS.cpp  MARS.h  MARSCore.h  glad.c
Engine/Classes/: CoreMinimal.h  EngineCore.h  MARSPCH.cpp  MARSPCH.h
Engine/Classes/Application/: Application.h  ApplicationEvent.hpp  Window.h
Engine/Classes/Core/: Asserts.h  EngineCore.h  Event.h  EventHandler.h  Game.h  ThreadManager.h
Engine/Classes/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Classes/Core/Layers/: GameLayer.h  Layer.h  LayerStack.h
Engine/Classes/GameFramework/: Game.h
Engine/Classes/GameFramework/Core/: Actor.h  Asset.h  DataAsset.hpp  DataTable.hpp  Entity.h  GameState.h  Info.h
Engine/Classes/GameFramework/Player/: Controller.h  Pawn.h
Engine/Classes/GameFramework/Sound/: Sound.h  SoundComponent.h  SoundCue.h
Engine/Classes/GameFramework/World/: Level.h  World.h
Engine/Classes/Input/: InputHandler.h  KeyboardEvent.hpp  Keys.h  Keys.hpp  MouseEvent.hpp
Engine/Classes/Math/: CoreMath.hpp  Vector.h  Vector3.hpp
Engine/Classes/Memory/: AllocationPolicies.hpp  GenericMemory.hpp
Engine/Classes/Rendering/: BufferLayout.h  GraphicsContext.h  IndexBuffer.h  OrthoCamera.h  RenderAPI.h  RenderContext.h  RenderTypes.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h
Engine/Classes/Rendering/API/: API_Resources.h  RenderContext.h  RenderContext_DX11.h
Engine/Classes/Rendering/OpenGL/: ImGui_OpenGL_Renderer.cpp  ImGui_OpenGL_Renderer.h  OpenGLContext.h  OpenGLIndexBuffer.h  OpenGLRenderAPI.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
Engine/Classes/Types/: Array.hpp  CoreTypes.h  CoreTypes.hpp  SmartPointer.hpp  Stack.h  Stack.hpp  String.hpp
Engine/Classes/UserInterface/: ImGuiLayer.h  OutputLog.h
Engine/Classes/Utility/: Delegate.hpp  DelegateDefines.hpp  Helper.hpp  Logging.cpp  Logging.h  Tick.hpp
Engine/Platform/Windows/: Windows_Input.cpp  Windows_Input.h  Windows_PlatformHandler.cpp  Windows_PlatformHandler.h
Engine/Source/Application/: Application.cpp  Window.cpp
Engine/Source/Core/: Game.cpp  ThreadManager.cpp
Engine/Source/Core/Layers/: GameLayer.cpp  Layer.cpp  LayerStack.cpp
Engine/Source/GameFramework/: Game.cpp
Engine/Source/GameFramework/Core/: Actor.cpp  DataAsset.cpp  DataTable.cpp  Entity.cpp  GameState.cpp  Info.cpp
Engine/Source/GameFramework/Player/: Controller.cpp  Pawn.cpp
Engine/Source/GameFramework/Sound/: Sound.cpp  SoundComponent.cpp
Engine/Source/GameFramework/World/: Level.cpp
Engine/Source/Input/: InputHandler.cpp
Engine/Source/Memory/: GenericMemory.cpp
Engine/Source/Rendering/: BufferLayout.cpp  GraphicsContext.cpp  IndexBuffer.cpp  OrthoCamera.cpp  RenderAPI.cpp  RenderContext.cpp  RenderTypes.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/Source/Rendering/API/: API_Resources.cpp  RenderContext.cpp  RenderContext_DX11.cpp
Engine/Source/Rendering/OpenGL/: OpenGLContext.cpp  OpenGLIndexBuffer.cpp  OpenGLRenderAPI.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Engine/Source/UserInterface/: ImGuiBuild.cpp  ImGuiLayer.cpp  OutputLog.cpp
